force-app/main/default/objects/Resume_Field_Map__mdt/Resume_Field_Map__mdt.object-meta.xml
<CustomObject>
    <label>Resume Field Map</label>
    <pluralLabel>Resume Field Maps</pluralLabel>
</CustomObject>