force-app/main/default/objects/Resume_Field_Map__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <type>Text</type>
    <description>Optional generic fallback applied only when the model returns blank. The value must be compatible with Data Type and the described target field; invalid defaults make the mapping inert.</description>
    <length>255</length>
</CustomField>