force-app/main/default/objects/Resume_Field_Map__mdt/fields/Extraction_Hint__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Hint__c</fullName>
    <label>Extraction Hint</label>
    <type>LongTextArea</type>
    <description>Synonyms/instructions telling the AI what to look for. Surfaced by buildExtraInstructions() as additional guidance for the prompt.</description>
    <length>1000</length>
</CustomField>