force-app/main/default/objects/Resume_Field_Map__mdt/fields/Include_In_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Prompt__c</fullName>
    <label>Include In Prompt</label>
    <type>Checkbox</type>
    <description>Whether buildExtraInstructions() asks the AI to extract this key. Uncheck for values that are computed rather than read from the résumé.</description>
    <defaultValue>true</defaultValue>
</CustomField>