force-app/main/default/objects/Resume_Field_Map__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <description>Uncheck to stop parsing/committing this field without deleting the mapping.</description>
    <defaultValue>true</defaultValue>
</CustomField>