force-app/main/default/objects/Resume_Field_Map__mdt/fields/Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Length__c</fullName>
    <label>Max Length</label>
    <type>Number</type>
    <description>For Text/Email/Phone values: the maximum character length before truncation. Externalizes the truncation lengths that used to be hardcoded in ResumeParsing (e.g. 255, 80, 40, 32000).</description>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>