force-app/main/default/objects/Resume_Field_Map__mdt/fields/Parse_Key__c.field-meta.xml
<CustomField>
    <fullName>Parse_Key__c</fullName>
    <label>Parse Key</label>
    <type>Text</type>
    <description>The exact JSON key the prompt template emits and the wizard/commit reads (e.g. company, candidateName). This is also the draft field name the LWC round-trips, so it is the single wire contract across prompt, LWC, and Apex.</description>
    <length>80</length>
    <required>true</required>
</CustomField>