force-app/main/default/objects/Resume_Field_Map__mdt/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <type>LongTextArea</type>
    <description>For Data Type = Picklist: the allowed values, one per line (or comma-separated). A parsed value is snapped case-insensitively to one of these; anything unmatched falls back to "Other" when present. Externalizes what used to be the hardcoded employment-type list.</description>
    <length>1000</length>
</CustomField>