force-app/main/default/objects/Resume_Field_Map__mdt/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <label>Read Only</label>
    <type>Checkbox</type>
    <description>When shown, display the value as read-only reference rather than an editable input. Read-only rows are never written on commit.</description>
    <defaultValue>false</defaultValue>
</CustomField>