force-app/main/default/objects/Resume_Field_Map__mdt/fields/Show_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Review__c</fullName>
    <label>Show In Review</label>
    <type>Checkbox</type>
    <description>Whether the field is surfaced in the wizard's review form for the user to see/edit.</description>
    <defaultValue>true</defaultValue>
</CustomField>