force-app/main/default/objects/Resume_Field_Map__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <description>Display order in the review wizard (candidate-level fields first, then work-experience columns).</description>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>