force-app/main/default/objects/Resume_Field_Map__mdt/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <label>Target Field API Name</label>
    <type>Text</type>
    <description>API name of the field on the Target Object that this value is written to on commit (e.g. Company_Name__c, Candidate_Email__c). Blank = extracted/shown but never written.</description>
    <length>80</length>
</CustomField>